src/test/invalid/semanticErr/custom/StringOrArray.wacc
begin
  char[] str = "hello" ;
  println str
end

